--- a/src/template.html
+++ b/src/template.html
@@ -20,7 +20,7 @@
 			href="assets/icons/apple-touch-icon.png"
 		/>
 		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="default" />
 		<link
 			rel="apple-touch-startup-image"
 			href="assets/splash/launch-640x1136.png"
